--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "express-session": "^1.17.2",
     "http-errors": "~1.6.3",
     "mongoose": "^6.2.11",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "sync-request": "^6.1.0"
   }
 }
